...
  String get backToServerSelection => 'Back to Server Selection';

  @override
  String get loginFlowNamelessUser => 'Unnamed User';

  @override
  String get loginFlowCustomUser => 'Custom User';

  @override
  String get loginFlowAuthenticationHeading => 'Log in to your account';

  @override
  String get backToAccountSelection => 'Back to Account Selection';
...
  String get password => 'كلمة السرية';

  @override
  String get passwordHint => 'Enter your password';

  @override
  String get login => 'Log In';

  @override
  String get logs => 'السجلات';

  @override
  String get next => 'التالي';
...
